<?xml version="1.0" encoding="utf-8"?>

<!-- ********************** BEGIN LEGAL STUFF ****************************
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    ********************** END LEGAL STUFF ******************************
-->

<!-- ********************** BEGIN DEVELOPER NOTES ****************************
	This is the strings file used to populate some string variable instantiations
	through out the App relative to Menu options.
	********************** END DEVELOPER NOTES ******************************
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/itemTopStories" android:title="@string/titleTopStories"></item>
	<item android:id="@+id/itemGlobalAlerts" android:title="@string/titleGlobalAlerts"></item>
	<item android:id="@+id/itemEarthquakes" android:title="@string/titleEarthquakes"></item>
	<item android:id="@+id/itemVolcanos" android:title="@string/titleVolcanos"></item>
	<item android:id="@+id/itemPollutionAlerts" android:title="@string/titlePullutionAlerts"></item>
	<item android:id="@+id/itemEBHIncidents" android:title="@string/titleEBHIncident"></item>
	<item android:id="@+id/itemAirCraftIncidents" android:title="@string/titleAirCraftIncidents"></item>
	<item android:id="@+id/itemHSIncidents" android:title="@string/titleHSIncident"></item>
	<item android:id="@+id/itemCATStory" android:title="@string/titleCATStory"></item>
</menu>
