<?xml version="1.0" encoding="utf-8"?>

<!-- ********************** BEGIN LEGAL STUFF ****************************
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    ********************** END LEGAL STUFF ******************************
-->
 
<!-- ********************** BEGIN DEVELOPER NOTES ****************************
	This is our primary layout file for the EarthQuakeActivity Class.
	
	It contains two key segments of code (1) the DASHBOARD layout, and (2) 
	the layout of the individual rows comprising the content of the Activity.
	
	DASHBOARD:
	The Dashboard used SELECTOR XML statements to either change the background 
	color [android:background] or (potentially) to change an image depending 
	on the state of pressed, selected, or default [android:src]. Those XML 
	files are housed in /res/drawables.	The images used are housed in 
	/res/drawable-hdpi. The [android:onClick] determines the functionality 
	of a clickable item, which can be found in the file BaseActivity.class.
	Android ID's are required for the INFO and SEARCH buttons because the 
	onClick Mechanism in the File BaseActivity.class [onClickAbout, onClickSearch]
	both cater to multiple activities using the info and search capabilities, 
	whereas	onClickHome, and onClickRefreshQuakes always perform only one function.
	
	ACTIVITY CONTENT:
	This contains a ListView inside of the LinearLayout that is required
	by the ArrayAdapter in the EarthquakeActivity Class. It will also 
	make use of the rowItemEarthquake TextView in the layout file
	row_earthquake.xml to define what and individual row (childView)
	looks like when displayed. 
	********************** END DEVELOPER NOTES ******************************
-->
	
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:weightSum="1" 
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent">
	
	
	<!-- ************** [BEGIN] CORE Elements of the DASHBOARD TITLE BAR  *****************-->
	
	<LinearLayout style="@style/TitleBar" android:weightSum="1">
	   
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" 
            android:background="@drawable/title_change_bkgrnd_color"/>

        <ImageView style="@style/TitleBarSeparator" />        
      
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_get_earthquakes"
            android:src="@drawable/title_get_earthquakes"
            android:onClick="onClickRefreshQuakes" 
            android:background="@drawable/title_change_bkgrnd_color" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_gravity="left"  
            android:paddingLeft="5dp"/>
        
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout"  
            android:background="@drawable/title_change_bkgrnd_color"
            android:id="@+id/info_btn_earthquakes" />
            
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search" 
            android:src="@drawable/title_search" 
            android:onClick="onClickSearch" 
            android:background="@drawable/title_change_bkgrnd_color" 
            android:id="@+id/search_btn_earthquakes" />
            
    </LinearLayout>
    
	<!-- ************** [END] CORE Elements of the DASHBOARD TITLE BAR      ******************************-->
	
	
	<!-- ************** [BEGIN] CORE Elements of Earthquakes Activity Screen  ****************************-->
	
	<ListView
  		xmlns:android="http://schemas.android.com/apk/res/android"
  		android:orientation="vertical"
  		android:id="@+id/eq_listView" 
  		android:layout_width="fill_parent" 
  		android:layout_height="match_parent">
	</ListView>

	<!-- ************** [END] CORE Elements of this Activity Screen  ****************************-->
	
</LinearLayout>





